[package]
name = "bevy_malek_async"
version = "0.3.0"
edition = "2024"
readme = "README.md"
authors = ["pocmalek@gmail.com"]
license = "MIT OR Apache-2.0"
description = "async runtime agnostic access to the bevy ecs"

[dependencies]
bevy_app = "0.18.0"
bevy_platform = "0.18.0"
bevy_ecs = "0.18.0"
crossbeam = "0.8.4"
concurrent-queue = "2.5.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
bevy = "0.18.0"